Refactoring code and change API verbs
